--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
+  chess_analytics:
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: view
+    marts:
       +materialized: table
+
